compiler/testData/compileKotlinAgainstCustomBinaries/releaseCoroutineCallFromExperimental/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/releaseCoroutineCallFromExperimental/experimental.kt:2:5: error: 'dummy(): Unit' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    dummy()
    ^
compiler/testData/compileKotlinAgainstCustomBinaries/releaseCoroutineCallFromExperimental/experimental.kt:4:9: error: 'dummy(): String' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    C().dummy()
        ^
compiler/testData/compileKotlinAgainstCustomBinaries/releaseCoroutineCallFromExperimental/experimental.kt:6:16: error: 'dummy(): String' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    C.Nested().dummy()
               ^
compiler/testData/compileKotlinAgainstCustomBinaries/releaseCoroutineCallFromExperimental/experimental.kt:8:17: error: 'dummy(): String' is only available since Kotlin 1.3 and cannot be used in Kotlin 1.2
    C().Inner().dummy()
                ^
COMPILATION_ERROR
